--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         </div>
 
         <script src="script.js"></script>
-        <script src="merge.js"></script>
+        <script src="./sortMethods/merge.js"></script>
     </body>
 </html>
