--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 
         <script src="script.js"></script>
         <script src="./sortMethods/merge.js"></script>
+        <script src="./sortMethods/quick.js"></script>
     </body>
 </html>
