--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
         <script src="script.js"></script>
         <script src="./sortMethods/merge.js"></script>
         <script src="./sortMethods/quick.js"></script>
+        <script src="./sortMethods/bubble.js"></script>
     </body>
 </html>
